data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3584.wast
;; 3. **Missing Stack Values**:    - **Test Description**: Attempt to call a function without pushing all required arguments onto the stack.    - **Constraint Checked**: Operand stack management (ensuring enough arguments are available).    - **CFG Relevance**: Prevents inconsistent CFG paths where functions are invoked without the necessary context.

(assert_invalid
  (module
    (func $missing-stack-values (call 0))
    (func (param i32))
  )
  "type mismatch"
)